# calorium

./: .gitignore  Makefile  docker-compose.dev.yml  docker-compose.prod.yml  select_query.sql
backend/: pyproject.toml
backend/app/: main.py
backend/app/auth/: crud.py  dependencies.py  exceptions.py  models.py  routes.py  schemas.py  senders.py  services.py
backend/app/eating/: crud.py  dependencies.py  models.py  routes.py  schemas.py  services.py
backend/app/files/: dependencies.py  schemas.py  services.py  utils.py
backend/app/products/: crud.py  dependencies.py  exceptions.py  handlers.py  models.py  routes.py  schemas.py  services.py
backend/app/project/: db.py  dependencies.py  settings.py
backend/app/utils/: schemas.py
backend/docker/: Dockerfile.dev  Dockerfile.prod
frontend/calories/: README.md  index.html  package-lock.json  package.json
frontend/calories/public/: manifest.json
frontend/calories/src/: main.ts
frontend/calories/src/api/: eatings.ts  products.ts  users.ts
frontend/calories/src/assets/: main.css
frontend/calories/src/components/: AppPopUp.vue  EatingsList.vue  InputDropdown.vue  Navigation.vue  PopUp.vue  Product.vue  ProductDropdownItem.vue  ProductForm.vue  ProductListItem.vue  ProductsList.vue  ProductsListNavigation.vue  UserUpdateForm.vue
frontend/calories/src/router/: index.ts
frontend/calories/src/stores/: eatings.ts  users.ts
frontend/docker/: Dockerfile.dev  Dockerfile.prod
frontend/nginx/: default.conf
nginx/: Dockerfile  Dockerfile.prod  nginx.conf  nginx.prod.conf
parser/: parser.py  pyproject.toml
(+7 files in other folders)
