[tool.poetry]
name = "parser"
version = "0.1.0"
description = ""
authors = ["artemowkin <artyom.groshev2017@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
beautifulsoup4 = "^4.12.2"
aiohttp = "^3.8.6"
aiosqlite = "^0.19.0"
aiofiles = "^23.2.1"
asyncpg = "^0.28.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
